# bevy-stealth-game-example

./: .gitattributes  Cargo.toml  LICENSE  README.md  project-words.txt
assets/actors/: player.actor.ron
assets/blueprints/: player.blueprint.ron
assets/emotes/: alarmed.emote.ron
assets/sound_waves/: alert.sound_wave.ron  guard.sound_wave.ron  player.sound_wave.ron
src/: assets.rs  configs.rs  events.rs  game_state.rs  lib.rs  main.rs  spawn.rs  spawners.rs  states.rs  system_params.rs  system_sets.rs  util.rs
src/actions/: action_sequence.rs  animation_action.rs  dialog_bubble.rs  dialog_bubble_action.rs  emote_action.rs  face_direction.rs  face_direction_action.rs  insert_component_action.rs  loop_action.rs  mod.rs  move_action.rs  move_to.rs  move_to_action.rs  parallel_action.rs  parallel_actions.rs  repeat_action.rs  repeat_sequence.rs  rotate_to_face_direction_action.rs  sound_action.rs  start_animation_action.rs  state_done.rs  state_done_action.rs  turn_to.rs  turn_to_action.rs  wait_action.rs
src/common/: constants.rs  mod.rs  recurrence.rs  repeat.rs
src/components/: animation.rs  animation_clips.rs  animation_entity_link.rs  animations.rs  animations_clips.rs  barrier.rs  blocks_vision.rs  deflects_sounds.rs  door.rs  drop_shadow.rs  ears.rs  emote.rs  eyes.rs  floor_switch.rs  footsteps.rs  for_state.rs  glass.rs  guard.rs  hearing.rs  invisibility.rs  mod.rs  motion.rs  move_to.rs  movement.rs  mover.rs  panning.rs  physics.rs  pickup.rs  player.rs  security_camera.rs  shatterable.rs  spawn_point.rs  speed.rs  start_location.rs  trigger.rs  velocity.rs  vision.rs  wall.rs  weapon.rs
src/entities/: camera.rs  mod.rs  spy.rs
src/events/: collision.rs  mod.rs  player_spotted_by.rs  ui_message.rs
src/game/: assets.rs  mod.rs  spawn.rs  (+2 more)
(+151 files in other folders)
